--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -453,3 +453,33 @@ a:hover {
 * {
 	font-family: monospace !important;
 }
+
+#footer {
+	position: fixed;
+	bottom: 1em;
+	width: 100%;
+	text-align: center;
+	color: rgba(255, 255, 255, 0.5);
+	font-size: 0.9em;
+	animation: footer-appear 1s ease-out forwards;
+	animation-delay: 3.25s;
+	opacity: 0;
+}
+
+@keyframes footer-appear {
+	0% {
+		transform: translateY(1em);
+		opacity: 0;
+	}
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+@media screen and (max-width: 736px) {
+	#footer {
+		bottom: 0.5em;
+		font-size: 0.8em;
+	}
+}
